--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,6 +10,8 @@ html(lang="en")
         header
             h1 Yoom
         main
-            h2 Welcome to Yoom
-            button Call
+            ul
+            form
+                input(type="text", placeholder="write a msg", required)
+                button Send 
         script(src="/public/js/app.js")
