--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -14,6 +14,7 @@ html(lang="en")
                 form
                     input(placeholder="room name", required, type="text")
                     button Enter Room
+                h4 Open Rooms:
             div#room
                 h3
                 ul 
